Spilling to disk in a sub-pipeline doesn't properly add a usedDisk: true field to the profiler entry

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Minor - P4
    • 6.2.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • Fully Compatible
    • ALL
    • QO 2022-01-24, QO 2022-02-07, QO 2022-02-21, QO 2022-03-07, QO 2022-03-21, QO 2022-04-04, QO 2022-04-18, QO 2022-05-02, QO 2022-05-16, QO 2022-05-30, QO 2022-06-13, QO 2022-06-27, QO 2022-07-11, QO 2022-07-25, QO 2022-08-08, QO 2022-08-22, QO 2022-09-05, QO 2022-09-19
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      This needs some investigation/verification. The observed example was a setWindowFields stage that seems to spill (spilling code was hit, and the profiler entry is present for the same setWindowFields in a regular pipeline) inside a $lookup's sub-pipeline. The aggregation's profiler entry for the aggregation with the $lookup should also contain a usedDisk: true field.

            Assignee:
            Gil Alon
            Reporter:
            Ted Tuckman (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: