SERVER-62071 Add useDisk call to preserve intermediate pipeline values